--- a/angharad.conf.sample
+++ b/angharad.conf.sample
@@ -69,11 +69,9 @@ database =
 # Authentication configuration
 authentication =
 {
-#  type           = "none"
-
-#  type           = "database"
-  
-   type           = "ldap"
+   database_auth  = false
+   
+   ldap_auth      = true
    uri            = "ldap://localhost"
    bind_dn        = "cn=admin,dc=example,dc=com"
    bind_passwd    = "password"
