--- a/angharad.conf.sample
+++ b/angharad.conf.sample
@@ -46,6 +46,25 @@ carleon_services_path="/path/to/carleon/modules"
 # path to modules folder for benoic
 benoic_modules_path="/path/to/benoic/modules"
 
+# OAuth2 scope required
+oauth_scope="angharad"
+
+# jwt parameters
+jwt =
+{
+   # Use RSA algorithm to sign tokens (asymetric)
+   use_rsa = false
+   
+   # path to the public certificate file to validate signatures
+   rsa_pub_file = "public.pem"
+   
+   # Use SHA algorithm to sign tokens (symetric)
+   use_sha = true
+   
+   # characters used to generate and validate the token
+   sha_secret = "secret"
+}
+
 # MariaDB/Mysql database connection
 database =
 {
@@ -63,19 +82,3 @@ database =
 #    type = "sqlite3";
 #    path = "/tmp/angharad.db";
 # };
-
-# Authentications methods available
-
-# Authentication configuration
-authentication =
-{
-   database_auth  = false
-   
-   ldap_auth      = true
-   uri            = "ldap://localhost"
-   bind_dn        = "cn=admin,dc=example,dc=com"
-   bind_passwd    = "password"
-   base_search    = "ou=users,dc=example,dc=com"
-   login_property = "uid"
-   filter         = "o=angharad"
-}
