--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
 [submodule "benoic"]
-	path = benoic
+	path = src/benoic
 	url = https://github.com/babelouest/benoic.git
 [submodule "gareth"]
-	path = gareth
+	path = src/gareth
 	url = https://github.com/babelouest/gareth.git
 [submodule "carleon"]
-	path = carleon
+	path = src/carleon
 	url = https://github.com/babelouest/carleon.git
+[submodule "webapp-src"]
+	path = webapp-src
+	url = https://github.com/babelouest/sagremor.git
