--- a/angharad.conf.sample
+++ b/angharad.conf.sample
@@ -23,7 +23,7 @@ url_prefix_carleon="carleon"
 url_prefix_gareth="gareth"
 
 # path to static files for /static url
-static_files_path="/usr/local/share/angharad/webapp"
+app_files_path="/usr/local/share/angharad/webapp"
 
 # mime types for webapp files
 app_files_mime_types =
