--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Angharad
 description: House automation system with a REST/Json interface
 google_analytics: 
 show_downloads: true
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
 
 gems:
   - jekyll-mentions
