Add redirect to file for valgrind output

--- a/src/Makefile
+++ b/src/Makefile
@@ -97,7 +97,7 @@ clean:
 memcheck: debug
 	cd $(BENOIC_LOCATION)/device-modules && $(MAKE) debug
 	cd $(CARLEON_LOCATION)/service-modules && $(MAKE) debug
-	valgrind --tool=memcheck --leak-check=full --show-leak-kinds=all ./angharad --config-file=../angharad.conf
+	valgrind --tool=memcheck --leak-check=full --show-leak-kinds=all ./angharad --config-file=../angharad.conf 2>valgrind.txt
 
 install-angharad:
 	cp -f angharad $(PREFIX)/bin
