--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,8 @@ set(PROJECT_BUGREPORT_PATH "https://github.com/babelouest/angharad/issues")
 set(ORCANIA_VERSION_REQUIRED "2.2.0")
 set(YDER_VERSION_REQUIRED "1.4.13")
 set(ULFIUS_VERSION_REQUIRED "2.7.2")
+set(RHONABWY_VERSION_REQUIRED "0.9.999")
+set(IDDAWC_VERSION_REQUIRED "0.9.9")
 set(HOEL_VERSION_REQUIRED "1.4.17")
 
 set(BENOIC_MODULES_SRC_PATH "${CMAKE_CURRENT_SOURCE_DIR}/src/benoic/device-modules/")
