Update jwks path

--- a/test/angharad-ci.conf
+++ b/test/angharad-ci.conf
@@ -54,7 +54,7 @@ oidc =
 {
 #  server_remote_config = "https://glewlwyd.tld/api/oidc/.well-known/openid-configuration"
 #  server_remote_config_verify_cert = true
-  server_public_jwks = "public-test.jwks"
+  server_public_jwks = "../public-test.jwks"
 #  iss = "https://glewlwyd.tld/"
 #  realm = "taliesin"
 #  aud = "me"
